# worldpop-stats

./: README.md  pyproject.toml
tests/: test_worldpop_stats.py
worldpop_stats/: worldpop_stats.py
