[tool.poetry]
name = "worldpop-stats"
version = "0.1.0"
description = ""
authors = ["cate <cseale@mapaction.org>"]

[tool.poetry.dependencies]
python = "^3.7"
earthengine-api = "^0.1.306"
geemap = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
